data/derived/comb/progs/unify/prog3059.ml.out
Characters 122-123:
  | h :: t  -> [bigAdd (mulByDigit x l2) [h/10]; h mod 10] @ t 
                                          ^
Error: This expression has type int list
       but an expression was expected of type int
